--- a/news/src/main/resources/templates/pages/youtube_opinion.html
+++ b/news/src/main/resources/templates/pages/youtube_opinion.html
@@ -5,6 +5,7 @@
     <title>Opinion Mining Dashboard</title>
     <link rel="stylesheet" href="/css/style.css"/>
     <link rel="stylesheet" href="/css/footer.css"/>
+    <link rel="stylesheet" href="/css/header.css"/>
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- WordCloud.js (CDN 교체 ✅) -->
