--- a/news/src/main/resources/templates/pages/chat.html
+++ b/news/src/main/resources/templates/pages/chat.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" th:href="@{/css/style.css}" />
   <link rel="stylesheet" href="/css/footer.css"/>
+  <link rel="stylesheet" href="/css/header.css"/>
   <style>
     .chatbot-container { position: relative; }
     .top-controls {
