--- a/news/src/main/resources/templates/pages/recommend.html
+++ b/news/src/main/resources/templates/pages/recommend.html
@@ -5,6 +5,7 @@
   <title>추천</title>
   <link rel="stylesheet" th:href="@{/css/style.css}" />
   <link rel="stylesheet" href="/css/footer.css"/>
+  <link rel="stylesheet" href="/css/header.css"/>
 
   <style>
     /* =========================
